WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
302287
[macOS] Video Viewer mode fails for iframe videos
https://bugs.webkit.org/show_bug.cgi?id=302287
Summary
[macOS] Video Viewer mode fails for iframe videos
Jer Noble
Reported
2025-11-10 14:32:50 PST
[macOS] Video Viewer mode fails for iframe videos
Attachments
Add attachment
proposed patch, testcase, etc.
Jer Noble
Comment 1
2025-11-10 14:36:25 PST
Pull request:
https://github.com/WebKit/WebKit/pull/53702
Radar WebKit Bug Importer
Comment 2
2025-11-10 14:36:31 PST
<
rdar://problem/164431738
>
Jer Noble
Comment 3
2025-11-10 14:37:03 PST
<
rdar://164037725
>
EWS
Comment 4
2025-11-11 03:23:15 PST
Committed
302842@main
(ad3158dabf29): <
https://commits.webkit.org/302842@main
> Reviewed commits have been landed. Closing PR #53702 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug