[macOS] Video Viewer mode fails for iframe videos https://bugs.webkit.org/show_bug.cgi?id=302287 rdar://164037725

Reviewed by Eric Carlson.

Restore the ability for videos in an iframe to enter Video Viewer mode. The
search criteria for the "bestMediaElementForRemoteControls" should be every
document within the page, and not just the main frame's document.

Tests: Tools/TestWebKitAPI/Tests/mac/InWindowFullscreen.mm

* Source/WebCore/page/Page.cpp:
(WebCore::Page::playbackControlsManagerUpdateTimerFired):
* Tools/TestWebKitAPI/Tests/mac/InWindowFullscreen.mm:
(TestWebKitAPI::TEST(InWindowFullscreen, IFrameDocument)):
* Tools/TestWebKitAPI/cocoa/TestWKWebView.h:
* Tools/TestWebKitAPI/cocoa/TestWKWebView.mm:
(-[WKWebView objectByEvaluatingJavaScriptWithUserGesture:inFrame:]):

Canonical link: https://commits.webkit.org/302842@main